tests/sumo/output/vtypeprobe/errors/id_missing/errors.sumo
Warning: VTypeProbes are deprecated. Use fcd-output devices (assigned to the vType) instead.
Error: Attribute 'id' is missing in definition of a vTypeProbe.
Quitting (on error).
